--- a/DeviceApp/static/css/addItem.css
+++ b/DeviceApp/static/css/addItem.css
@@ -1,9 +1,6 @@
 html, body {
-
     background-color: rgb(87, 87, 87)
-    
 }
-
 #header {
     color: white;
 }
@@ -11,4 +8,8 @@ html, body {
 #columns {
     background-color: rgb(202, 202, 202);
     color: black;
+}
+
+#add_label {
+    color: white;
 }
