--- a/DeviceApp/templates/addItem.html
+++ b/DeviceApp/templates/addItem.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 
+{% block style %}
+
+
 {% block content %}
 
 <div class="container-fluid">
@@ -8,7 +11,7 @@
         <div class="align-items-start">
 
             {% for item in columns %}
-                <label id="add_Label" class="row">{{ item|capitalize }}</label>
+                <label id="add_label" class="row">{{ item|capitalize }}</label>
                 <input class="row" type="text" name="{{item}}" value="{{item}}">
             {% endfor %}
 
