--- a/DeviceApp/templates/addItem.html
+++ b/DeviceApp/templates/addItem.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 
+{% block content %}
+
 <div class="container-fluid">
-    <form action="/add" method="POST">
+    <form action="/add/submit" method="POST">
 
         <div class="align-items-start">
 
