--- a/DeviceApp/templates/index.html
+++ b/DeviceApp/templates/index.html
@@ -5,8 +5,8 @@
 
 <div class="">
     <form action="/add" method="POST">
-        <input type="text" name="title" value="Enter Title Here">
-        <input type="text" name="content" value="Enter Content Here">
+        <!-- <input type="text" name="title" value="Enter Title Here">
+        <input type="text" name="content" value="Enter Content Here"> -->
         <input type="submit" value="Post">
     </form>
 </div>
