--- a/DeviceApp/templates/index.html
+++ b/DeviceApp/templates/index.html
@@ -2,11 +2,11 @@
 
 
 {% block content %}
-<div class="d-flex align-items-center">
-    <div class="container-fluid">
-      <h1 class="row justify-content-center">Welcome to the Device Manager List!</h1>
-      <h2 class="row justify-content-center">Choose a page to get started</h2>
+    <div id="welcome" class="row h-100">
+        <div class="col align-self-center p-5">
+            <h1 class="display-4 row justify-content-center">Welcome to the Device Manager List!</h1>
+            <h2 class="row justify-content-center">Choose a page to get started</h2>
+        </div>
     </div>
-</div>
 
 {% endblock %}
