--- a/DeviceApp/templates/layout.html
+++ b/DeviceApp/templates/layout.html
@@ -15,44 +15,44 @@
         <title>Device Manager!</title>
     </head>
     
-    <body>
-        <header>
+    <body class="h-100">
+        <header id="headertr">
             <div id="header" class="container-fluid">
                 <h1 class="row justify-content-center">Device Manager</h1>
             </div>
-
+    
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
+    
                 <a class="navbar-brand" href="#">Device Tracker</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-
+    
                 <div class="collapse navbar-collapse" id="navbarText">
-
+    
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                       <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('device_tracker') }}">Device Tracker</a>
+                      <a class="nav-link" href="{{ url_for('show_page', path='device_tracker') }}">Device Tracker</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="">Nothing</a>
+                      <a class="nav-link" href="{{ url_for('show_page', path='desktops') }}">Desktops</a>
                     </li>
                   </ul>
-
+    
                 </div>
-
+    
               </nav>
         </header>
 
-        <body>
         {% block content%} {% endblock %}
-        </body>
+
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
+
 </html>
