--- a/DeviceApp/templates/tablePage.html
+++ b/DeviceApp/templates/tablePage.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="">
+<div>
     <form action="/add" method="POST">
         <!-- <input type="text" name="title" value="Enter Title Here">
         <input type="text" name="content" value="Enter Content Here"> -->
@@ -24,10 +24,22 @@
 
     {% for item in items %}
 
-    <tr>
+    <tr id="{{item[0]}}" name="{{item[0]}}">
         {% for info in item %}
         <td>{{info}}</td>
         {% endfor %}
+        <td>
+
+            <div>
+                <form action="/edit" method="POST">
+                    <button name="{{table}}:{{item[0]}}" id="editBtn">Edit</button>
+                </form>
+            
+                <form action="/delete" method="POST">
+                    <button name="{{table}}:{{item[0]}}" id="deleteBtn">Delete</button>
+                </form>
+            </div>
+        </td>
     </tr>
 
     {% endfor %}
