--- a/DeviceApp/templates/index.html
+++ b/DeviceApp/templates/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <div id="welcome" class="row h-75">
+    <div id="welcome" class="row h-75 w-100">
         <div class="col align-self-center p-1">
             <h1 class="display-4 row justify-content-center">Welcome to the Device Manager List!</h1>
             <h2 class="row justify-content-center">Choose a page to get started</h2>
