--- a/DeviceApp/templates/tablePage.html
+++ b/DeviceApp/templates/tablePage.html
@@ -2,16 +2,21 @@
 
 
 {% block content %}
+<div class="col">
+    <h2 class="row justify-content-center">{{table}}</h2>
+</div>
 
-<div>
-    <form action="/add" method="POST">
-        <!-- <input type="text" name="title" value="Enter Title Here">
-        <input type="text" name="content" value="Enter Content Here"> -->
-        <input type="submit" value="Post">
+<div class="col align-self-center p-1">
+    
+    <form class="row justify-content-center" action="/add" method="POST">
+        <input type="hidden" name="table" value="{{table}}">
+        <input class="p-2" type="submit" value="Add Entry">
     </form>
 </div>
 
 <div>
+
+<div id="tableDiv" class="table-responsive h-100">
 <table class="table table-striped table-dark table-bordered">
 
     <thead>
@@ -28,8 +33,8 @@
         {% for info in item %}
         <td>{{info}}</td>
         {% endfor %}
-        <td>
 
+        <td>
             <div>
                 <form action="/edit" method="POST">
                     <button name="{{table}}:{{item[0]}}" id="editBtn">Edit</button>
@@ -45,6 +50,8 @@
     {% endfor %}
 
 </table>
+</div>
+
 </div>
 
 {% endblock %}
