--- a/DeviceApp/templates/tablePage.html
+++ b/DeviceApp/templates/tablePage.html
@@ -16,16 +16,18 @@
 
 <div>
 
-<div id="tableDiv" class="table-responsive h-100">
-<table class="table table-striped table-dark table-bordered">
-
+    
+<div id="tableDiv" class="table table-responsive h-100">
+<table id="dataTable" class="table-md table-hover table-striped table-dark table-bordered table-fixed" style="width:100%">
+    
     <thead>
-        <tr class="columns">
+        <tr id="tableHeader">
             {% for column in columns %}
-            <th class="columns align-self-center" scope="col">{{column}}</th>
+            <th id="tableHeadRow" class="columns align-self-center" scope="col">{{column}}</th>
             {% endfor %}
         </tr>
-    </tread>
+    </thead>
+
 
     {% for item in items %}
 
@@ -47,6 +49,8 @@
         </td>
     </tr>
 
+
+
     {% endfor %}
 
 </table>
@@ -54,4 +58,8 @@
 
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript" src="{{ url_for('static', filename='javascript/stickyTableHeader.js') }}"></script>
 {% endblock %}
