--- a/DeviceApp/templates/addItem.html
+++ b/DeviceApp/templates/addItem.html
@@ -34,7 +34,7 @@
             {% endfor %}
 
 
-        <div class="col mt-3">
+        <div class="col mt-3 mb-3">
             <span class="row justify-content-center">
             <input class="row p-2" type="submit" value="Post">
             </span>
