--- a/DeviceApp/templates/tablePage.html
+++ b/DeviceApp/templates/tablePage.html
@@ -6,18 +6,35 @@
     <h2 class="row justify-content-center">{{table}}</h2>
 </div>
 
-<div class="col align-self-center p-1">
-    
-    <form class="row justify-content-center" action="/add" method="POST">
+<div class="row">
+    <form class="ml-2" action="/add" method="POST">
         <input type="hidden" name="table" value="{{table}}">
         <input class="p-2" type="submit" value="Add Entry">
     </form>
 </div>
 
-<div>
+<div class="row">
 
+    <span class="col">
+
+        <input type="text" id="myInput" onkeyup="searchBox()" placeholder="Search" style="width: 25%;">
+
+        <label class="m-2" style="color: white;">Search by: </label>
     
-<div id="tableDiv" class="table table-responsive h-100">
+        <select id="filterSelect" class="" style="width: 10%;" onchange="searchBox()">
+    
+            {% for column in columns %}
+            <option value="{{loop.index-1}}">{{column}}</option>
+            {% endfor %}
+    
+        </select>
+
+    </span>
+
+</div>
+
+<div id="tableDiv" class="table h-100">
+
 <table id="dataTable" class="table-md table-hover table-striped table-dark table-bordered table-fixed" style="width:100%">
     
     <thead>
@@ -39,11 +56,11 @@
         <td>
             <div>
                 <form action="/edit" method="POST">
-                    <button name="{{table}}:{{item[0]}}" id="editBtn">Edit</button>
+                    <button name="{{table}}:{{item[0]}}">Edit</button>
                 </form>
             
                 <form action="/delete" method="POST">
-                    <button name="{{table}}:{{item[0]}}" id="deleteBtn">Delete</button>
+                    <button name="{{table}}:{{item[0]}}">Delete</button>
                 </form>
             </div>
         </td>
@@ -61,5 +78,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="{{ url_for('static', filename='javascript/stickyTableHeader.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='javascript/table.js') }}"></script>
 {% endblock %}
