--- a/DeviceApp/templates/addItem.html
+++ b/DeviceApp/templates/addItem.html
@@ -13,20 +13,23 @@
 
         <input type="hidden" name="table" value="{{table}}">
 
+            {% set count = namespace(value=0) %}
+
             {% for row in rows %}
             <div class="row justify-content-center">
 
                 {% for item in row %}
+
                 <div class="col m-2">
 
                     <span class="row justify-content-center">
-                    <label class="" id="add_label">{{ item }}</label>
+                    <label class="add_label" id="">{{ item }}</label>
                     </span>
 
                     <span class="row justify-content-center">
-                    <input class="text-center" type="text" name="{{item}}" value="">
+                    <input class="text-center" type="text" name="{{count.value}}" value="{{count.value}}">
                     </span>
-
+                    {% set count.value = count.value + 1 %}
                 </div>
                 {% endfor %}
 
