--- a/DeviceApp/templates/addItem.html
+++ b/DeviceApp/templates/addItem.html
@@ -4,8 +4,8 @@
 
 <div class="container-fluid w-100">
 
-    <div class="col">
-        <h2 class="row justify-content-center">{{table}}</h2>
+    <div class="col tableNameDiv">
+        <h1 class="row display-4 tableName">{{tableName}}</h1>
     </div>
     
 
