--- a/DeviceApp/templates/layout.html
+++ b/DeviceApp/templates/layout.html
@@ -21,26 +21,25 @@
     <body>
         <header id="header">
             <div id="header" class="container-fluid">
-                <h1 class="row justify-content-center">Device Manager</h1>
+                <h1 class=" display-3 row justify-content-center">Device Manager</h1>
             </div>
     
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
     
-                <a class="navbar-brand" href="{{ url_for('index') }}">Device Tracker</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
     
-                <div class="collapse navbar-collapse" id="navbarText">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarText">
     
-                  <ul class="navbar-nav mr-auto">
+                  <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link text-dark hover" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     {% for dataTable in dataTables %}
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('show_page', table=dataTable) }}">{{pageNames[loop.index-1]}}</a>
+                      <a class="nav-link text-dark hover" href="{{ url_for('show_page', table=dataTable) }}">{{pageNames[loop.index-1]}}</a>
                     </li>
                     {% endfor %}
                   </ul>
