--- a/DeviceApp/templates/tablePage.html
+++ b/DeviceApp/templates/tablePage.html
@@ -2,8 +2,8 @@
 
 
 {% block content %}
-<div class="col mt-5">
-    <h2 id="tableName" class="row justify-content-center">{{table}}</h2>
+<div id="" class="col mt-5 tableNameDiv">
+    <h1 id="" class=" row display-4 tableName">{{tableName}}</h2>
 </div>
 
 <div class="row">
