--- a/DeviceApp/templates/tablePage.html
+++ b/DeviceApp/templates/tablePage.html
@@ -33,9 +33,9 @@
 
 </div>
 
-<div id="tableDiv" class="table h-100">
+<div id="tableDiv" class="table">
 
-<table id="dataTable" class="table-md table-hover table-striped table-dark table-bordered table-fixed" style="width:100%">
+<table id="dataTable" class="table table-hover table-striped table-dark table-bordered">
     
     <thead>
         <tr id="tableHeader">
