--- a/DeviceApp/templates/layout.html
+++ b/DeviceApp/templates/layout.html
@@ -15,13 +15,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Device Manager!</title>
+        <title>Web-based Data Manager</title>
     </head>
     
     <body>
         <header id="header">
             <div id="header" class="container-fluid">
-                <h1 class=" display-3 row justify-content-center">Device Manager</h1>
+                <h1 class=" display-3 row justify-content-center">Web-based Data Manager</h1>
             </div>
     
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
